  * Added better error handling by giving a proper error when no project name is provided on a create command
  * Added requirement for 'uuidtools' gem for creating unique filenames for the agname.dat files since the Avaya outputs them the same
  * Capture and report the error when echi-converter create command fails
  * Provided an example ASCII CSV file in examples/ascii_csv for testing
* Bug fix(es):  
  * Bug ##15367 - Added to documentation that when using a Windows FTP server you must specify 'UNIX directory listing format'

== 0.3.3 2007-11-06

* Major enhancement(s):
* Minor enhancement(s):
  * Added error traps for ECHI_LOGS
* Bug fix(es):  
  * Fixed a bug where the utility was not properly deleting the files from the ftp server
  * Fixed a bug for the pco schema usage changing the echi_log column processed_at to processedat via the 005_change_log_processedat_name migration

== 0.3.4 2007-11-TBD

* Major enhancement(s):
* Minor enhancement(s):
  * Added a database test script to examples/db_connect_test.rb
  * Set the default ftp port in application.yml to 21
  * Properly report that the database has been initialized at the start of processing as opposed to a successful connection
  * Encapsulate the ASCII/BINARY database transactions in Begin/Rescue clauses to report on additional database issues that might arise
  * Changed the schema YML references to 'echi_records' from 'fields' in order to use that file to store additional database table definitions
  * Changed the default databse name to 'echi' in database.yml
  * Added 006_create_echi_aux_reasons.rb, 007_create_echi_cwcs.rb and 008_create_echi_vdns.rb migrations
  * Startup sequence now shows which settings were used
  * Changed the application.yml setting of echi_update_agent_data to echi_process_dat_files
  * Refactored logging mechanism
  * Added support for additional '.dat' files including aux_rsn.dat, cwc.dat and vdn.dat
* Bug fix(es):  