@@ -4,3 +4,4 @@ database: echi
 username: root
 password:
 host: localhost
+#encoding: utf8
