@@ -63,7 +63,7 @@
 		<li>Convert from the defined Binary format to <span class="caps">ASCII</span></li>
 		<li>Insert the records into the defined database table using database transactions, via ActiveRecord, on a per file basis to support recovery on failure</li>
 		<li>Change schema structure via <span class="caps">YML</span> configuration file to accommodate various releases of the <span class="caps">ECHI</span> format</li>
-		<li>Supports inserting agent names from agname.dat</li>
+		<li>Supports inserting data from the various &#8217;.dat&#8217; files provided</li>
 		<li>Runs as a daemon (via fork) on *NIX and a service on Windows</li>
 	</ol>
 
@@ -73,7 +73,10 @@
 	<ol>
 	<li>echi_records &#8211; stores all <span class="caps">ECHI</span> data        </li>
 		<li>echi_logs &#8211; stores a log entry for each file processed</li>
-		<li>echi_agents &#8211; stores the data from the agname.dat file</li>
+		<li>echi_agents &#8211; stores the data from the agname.dat file </li>
+		<li>echi_aux_reasons &#8211; stores the data from the aux_rsn.dat file</li>
+		<li>echi_cwcs &#8211; stores data from the cwc.dat file</li>
+		<li>echi_vdns &#8211; stores data from the vdn.dat file</li>
 	</ol></li>
 	</ol>
 
@@ -185,6 +188,14 @@
 	</ol>
 
 
+	<p>Multi-byte character support:</p>
+
+
+	<ol>
+	<li>If you require multi-byte character support be sure to set your database to &#8216;utf8&#8217; as well as uncomment the option &#8216;encoding: utf8&#8217; in the config/database.yml file</li>
+	</ol>
+
+
 	<h2>Demonstration of usage</h2>
 
 
@@ -248,7 +259,7 @@
 
 	<p>Comments are welcome. Send an email to <a href="mailto:jason@goecke.net">jason [at] goecke.net</a>.</p>
     <p class="coda">
-      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 7th November 2007<br>
+      <a href="mailto:drnicwilliams@gmail.com">Dr Nic</a>, 14th November 2007<br>
       Theme extended from <a href="http://rb2js.rubyforge.org/">Paul Battley</a>
     </p>
 </div>
